<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/set_up_your_daily_sync_time_and_sync_frequency"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/view1"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.500"/>

    <Button
        android:id="@+id/daily_sync_time_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:text="@string/set_daily_sync_time"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/view1"/>

    <ImageView
        android:padding="6dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/time_left"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        android:contentDescription="@string/app_name"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintVertical_bias="0.500"/>

    <Button
        android:id="@+id/sync_frequency_BTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:text="@string/set_sync_frequency"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/view2"
        app:layout_constraintBottom_toBottomOf="@id/view2"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/frequence"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toTopOf="@id/view2"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        android:contentDescription="@string/app_name"/>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/view2"/>

    <Button
        android:id="@+id/sync_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@android:color/transparent"
        android:text="@string/sync_now"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="@id/view3"
        app:layout_constraintBottom_toBottomOf="@id/view3"/>

    <ImageView
        android:padding="6dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/view3"
        app:layout_constraintTop_toTopOf="@id/view3"
        app:layout_constraintBottom_toBottomOf="@id/view3"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/daily_sync_TEXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/bsp_transparent_black"
        app:layout_constraintTop_toBottomOf="@id/view3"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>